# lictool

./: .gitignore  .rustfmt.toml  Cargo.toml  LICENSE.md  README.md
src/: cli.rs  consts.rs  main.rs  spdx.rs  template.rs
src/util/: cache.rs  errors.rs  git.rs  mod.rs
tests/files/: details.json  licenses.json
