[package]
name = "lictool"
authors = ["Charles R. Tyrrell <alloyshaper@proton.me>"]
description = "Lictool is a utility that will help you quickly add a spdx license to your project right from the command line"
repository = "https://github.com/fracturesky/lictool.git"
keywords = ["license-generator", "spdx", "cli", "license", "developer-tool"]
categories = ["command-line-utilities", "asynchronous"]
version = "0.5.0"
edition = "2021"
license = "GPL-3.0-only"

[dependencies]
anstyle = "1.0.7"
anyhow = "^1.0.86"
chrono = "^0.4.38"
clap = { version = "^4.5.3", features = ["derive"] }
clap_complete = "^4.5.7"
color-print = "^0.3.6"
dialoguer = { version = "0.11.0", features = ["fuzzy-select", "completion"] }
dirs = "5.0.1"
git2 = "0.19.0"
http-cache-reqwest = "0.14.0"
reqwest = { version = "0.12.5", features = ["blocking", "json"] }
reqwest-middleware = "0.3.2"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.120"
snafu = "^0.8.3"
termion = "4.0.2"
tokio = { version = "1.38.0", features = ["full"] }

[dev-dependencies]
pretty_assertions = "1.4.0"
mockito = "1.4.0"
tempfile = "3.10.1"
